<resources>
    <string name="app_name">Trendy</string>
    <string name="message_no_internet">No internet connection</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="haveAcc">Already have an account?</string>
    <string name="signWithSocial">Or sign up with social account</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="forgotPasswordText">Forgot password</string>
    <string name="forgotText">Please, enter your email address. You will receive a link to create a new password via email. </string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="cart">Cart</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="categories">Categories</string>
    <string name="viewAllItem">VIEW ALL ITEMS</string>
    <string name="chooseCategory">Choose Category</string>
    <string name="editProfile">Edit Profile</string>
    <string name="orderHistory">Order History</string>
    <string name="address"> Address</string>
    <string name="changeLanguage"> Change Language </string>
    <string name="myProfile"> My Profile </string>
    <string name="signOut"> Sign Out </string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">Ok</string>
    <string name="log_out_qs">Do you want to log out?</string>
    <string name="delete_alert">Do you want to delete this?</string>
    <string name="check_out_alert">that you want to checkout your cart?</string>

    <string name="title_dynamicfeature">assets</string>
    <string name="title_dynamicfeature2">assets</string>
    <string name="trendy_fashion">Trendy Fashion</string>
    <string name="my_bag">My Bag</string>
    <string name="total_amount">Total amount: </string>
    <string name="check_out">CHECK OUT</string>
    <string name="super_summer_sale">Super summer sale</string>
    <string name="view_more">View more</string>
    <string name="never_seen_before">You have never seen before!</string>
    <string name="filter">Filter</string>
    <string name="copyright">© 2024 Trendy Team. All rights reserved.</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="done">Done</string>

</resources>