<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="15dp"
        android:src="@drawable/ic_arrow_back"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/forgotPasswordText"
        android:textStyle="bold"
        android:textSize="20sp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/forgotText"/>


    <com.google.android.material.textfield.TextInputLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_sign_up"
        android:textSize="14sp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/buttonColor"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/send"/>
</LinearLayout>