<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".UI.Fragment.Cart.CartFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/my_bag"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/cart_data"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/total_amount"
            android:textColor="@color/grey_font"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:text="api"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round_custom"
        android:text="@string/check_out"
        android:textColor="@color/white"
        android:textSize="14sp" />

</androidx.appcompat.widget.LinearLayoutCompat>
