<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:layout_height="match_parent">

  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <ImageView
          android:id="@+id/btn_register_close"
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_margin="15dp"
          android:src="@drawable/ic_arrow_back"
          android:importantForAccessibility="no" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"
          android:text="@string/sign_up"
          android:textStyle="bold"
          android:textSize="20sp"/>

      <com.google.android.material.textfield.TextInputLayout
          android:background="@color/white"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="15dp"
          android:hint="@string/name">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:background="@color/white"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="15dp"
          android:hint="@string/email">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:background="@color/white"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="15dp"
          android:hint="@string/password">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />
      </com.google.android.material.textfield.TextInputLayout>


      <LinearLayout
          android:layout_width="wrap_content"
          android:orientation="horizontal"
          android:layout_margin="15dp"
          android:layout_gravity="end"
          android:layout_height="wrap_content"
          tools:ignore="UseCompoundDrawables">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:text="@string/haveAcc"/>

          <ImageView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="3dp"
              android:src="@drawable/ic_arrow_more"
              android:importantForAccessibility="no" />

      </LinearLayout>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/button_sign_up"
          android:textSize="14sp"
          android:layout_margin="15dp"
          android:background="@drawable/button_round_custom"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:textColor="@color/white"
          android:text="@string/sign_up"/>
  </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:gravity="center"
        android:id="@+id/app_version"
        android:textSize="14sp"
        android:textColor="@color/secondary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>