<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/snowWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_bar_layout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/buttonColor" />

            <TextView
                android:id="@+id/titleCategory"
                style="@style/appBarTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:text="@string/check_out" />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:id="@+id/cart_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/total_amount"
            android:textColor="@color/grey_font"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:text="api"
            android:textStyle="bold"
            android:id="@+id/total_price_data"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round_custom"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>
