<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".UI.Fragment.Profile.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="@string/myProfile" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/editProfile"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/textGray"
                    android:src="@drawable/ic_arrow_forward"
                    />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/address"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/textGray"
                    android:src="@drawable/ic_arrow_forward"
                    />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/orderHistory"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_forward"
                    app:tint="@color/textGray" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"/>

        </LinearLayout>



        <TextView
            android:id="@+id/testText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fakeView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_round_custom"
        android:text="@string/signOut"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <View
        android:id="@+id/fakeView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>



</RelativeLayout>