<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".UI.Fragment.Home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:iss_auto_cycle="true"
        app:iss_period="1000"
        app:iss_delay="1000"
        app:iss_text_align="CENTER"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="Sale"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/super_summer_sale"
                android:textColor="@color/grey_font"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/view_more"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:text="New"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/never_seen_before"
                android:textColor="@color/grey_font"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/view_more"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>








</androidx.appcompat.widget.LinearLayoutCompat>