<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    android:background="@android:color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <com.airbnb.lottie.LottieAnimationView
            android:visibility="visible"
            android:id="@+id/animationView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            app:lottie_rawRes="@raw/question"
            app:lottie_autoPlay="true" />

<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:id="@+id/progress_bar"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_margin="10dp"-->
<!--            android:visibility="gone"-->
<!--            app:lottie_autoPlay="true"-->
<!--            app:lottie_fileName="progress_bar.json"-->
<!--            app:lottie_loop="true" />-->

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/are_you_sure"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="Do you want to reject this item?"
            android:textColor="@color/textGray"
            android:textSize="15sp" />


        <LinearLayout
            android:id="@+id/ln_button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/textGray"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/buttonColor"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>