<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/categories"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_search"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:background="@color/bg"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/button_login"
            android:textSize="14sp"
            android:background="@drawable/button_round_custom2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:text="@string/viewAllItem"/>
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/textGray"
            android:layout_height="wrap_content"
            android:text="@string/chooseCategory"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="Tops"
                android:textSize="14dp"
                tools:ignore="TextSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="#000000"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="Tops"
                android:textSize="14dp"
                tools:ignore="TextSizeCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1dp"
                android:background="#000000"/>

        </LinearLayout>








    </LinearLayout>



</LinearLayout>